--- a/DocDB/app/views/main.scala.html
+++ b/DocDB/app/views/main.scala.html
@@ -12,8 +12,14 @@
 
 		<link rel="stylesheet" href="/assets/stylesheets/main.css">
 		<link rel="stylesheet" type="text/css" href="/assets/stylesheets/basic.css">
+		<link rel='stylesheet' href='/assets/javascripts/spectrum.css'>
+		
+		
 		<script src="/assets/javascripts/scripts.js"></script>
 		<script src="/assets/javascripts/dropzone.js"></script>
+		<script src='/assets/javascripts/spectrum.js'></script>
+		<script src='/assets/javascripts/tinycolor.js'></script>
+		
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 		<!-- Latest Bootstrap -->
