--- a/DocDB/app/views/main.scala.html
+++ b/DocDB/app/views/main.scala.html
@@ -10,18 +10,15 @@
 
 		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
-		<link rel="stylesheet" href="/assets/stylesheets/main.css">
 		<link rel="stylesheet" type="text/css" href="/assets/stylesheets/basic.css">
 		<link rel='stylesheet' href='/assets/javascripts/spectrum.css'>
-		
-		
+
+
 		<script src="/assets/javascripts/scripts.js"></script>
 		<script src="/assets/javascripts/dropzone.js"></script>
 		<script src='/assets/javascripts/spectrum.js'></script>
 		<script src='/assets/javascripts/tinycolor.js'></script>
-		
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 		<!-- Latest Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
@@ -30,7 +27,8 @@
 		<script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 		<script type="text/javascript" charset="utf-8" src="@routes.Application.SearchScript()"></script>
 
-		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+		<script type="text/javascript" charset="utf-8" src='@routes.Assets.at("javascripts/previewScript.js")'></script>
+		<link rel="stylesheet" media="screen" href='@routes.Assets.at("stylesheets/main.css")'>
 
 		<style>
 		body{overflow-y: scroll;}
