--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -13,7 +13,7 @@
 				localStorage["oldSearch"]="";
 			if(typeof localStorage["numberOfDropzones"] == 'undefined')
 				localStorage["numberOfDropzones"] = 1;
-						
+
 			for(i = 0; i < 3; i++) {
 				if(typeof localStorage["color"+i] == 'undefined')
 					localStorage["color"+i] = getRandomColor();
@@ -56,7 +56,7 @@
 						return this.indexOf(suffix, this.length - suffix.length) !== -1;
 					};
 			</script>
-	 		
+
 	<h2 style="margin-top: 0px;">Search</h2>
 		<div id="geoLoc" style="display:none;"></div>
 		<div id="content1">
@@ -65,7 +65,6 @@
 					<input type="text" id="search" onkeydown="checkKey('search');" class="form-control" placeholder="Search">
 					<span class="input-group-addon glyphicon glyphicon-search"></span>
 				</div>
-
 				<div id="resultDiv" style="display:none;" ng-app="searchRes" ng-controller="searchController" class="list-group">
 					<div ng-repeat="result in results track by $index" class="singleResultDiv gridable">
 						<span class="list-group-item">
@@ -74,20 +73,18 @@
 									<span class="badge" style="float: right;">{{result.size}}kB</span>
 									<h3 class="panel-title" title={{result.file}} >{{result.file}}</h3>
 								</div>
-
-								<div class="panel-body gridable">
-									<a href={{"Download/"+result.link}}>
-										<span class="glyphicon glyphicon-download downloadIcon"></span>
-									</a>
-									<a href={{"Preview/"+result.link}} target="_blank">
-										<span class="glyphicon glyphicon-info-sign downloadIcon"></span>
-									</a>
-									<span ng-bind-html="result.context | unsafe"></span>
-									<img ng-if="result.link.endsWith('.jpg')||result.link.endsWith('.JPG')||result.link.endsWith('.png')||result.link.endsWith('.PNG')" src={{"Preview/"+result.link}}></img>
-								</div>
-								<div class="panel-footer">
-									<span ng-repeat="tag in result.tags track by $index"><small class="label label-info" >#{{tag}}</small> </span>
-								</div>
+							<div class="panel-body gridable">
+								<a href={{"Download/"+result.link}} onclick="function(e){e.preventDefault();}">
+									<span class="glyphicon glyphicon-download downloadIcon"></span>
+								</a>
+								<a href={{"Preview/"+result.link}} target="_blank" onclick="function(e){e.preventDefault();}">
+									<span class="glyphicon glyphicon-info-sign downloadIcon"></span>
+								</a>
+								<span ng-bind-html="result.context | unsafe"></span>
+								<img ng-if="result.link.endsWith('.jpg')||result.link.endsWith('.JPG')||result.link.endsWith('.png')||result.link.endsWith('.PNG')" src={{"Preview/"+result.link}}></img>
+							</div>
+							<div class="panel-footer">
+								<span ng-repeat="tag in result.tags track by $index"><small class="label label-info" >#{{tag}}</small> </span>
 							</div>
 						</span>
 					</div>
@@ -100,7 +97,7 @@
 					<div id="resCount" ></div>
 			</div>
 		</div>
-		
+
 		<hr class="featurette-divider">
 		<div class="jumbotron">
 			<h2>Drop files via link</h2>
@@ -120,14 +117,14 @@
         </div>
     </div>
 <!------------------------------------------>
-	 
+
 	<div class="jumbotron" style="margin-top: auto;">
-		
+
 		<h2>Drop files</h2>
-		 
+
 			<div id="dropzoneSettings"><span type="button" class="glyphicon glyphicon-cog" data-toggle="modal" data-target="#myModal"></span></div>
 			<!-- Button trigger modal -->
-			
+
 			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -141,7 +138,7 @@
 						});
 						</script>
 						<div class="modal-body">
-							Number of dropzones:  
+							Number of dropzones:
 							<select name="selectDrop" id="dropzoneNumber" onchange="" size="1">
 								<option value="1">One</option>
 								<option value="2">Two</option>
@@ -149,13 +146,13 @@
 							</select>
 							</br>
 							Choose colors of dropzones: </br>
-							
+
 								#1  <input type='text' id="color0" class='override' value='' >
 								</br>
 								#2  <input type='text' id="color1" class='override' value='' />
 								</br>
 								#3  <input type='text' id="color2" class='override' value='' />
-							
+
 							<script>
 								$("#color0").spectrum({
 									color: localStorage["color0"]
@@ -167,18 +164,18 @@
 									color: localStorage["color2"]
 								});
 							</script>
-								
+
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-							 
+
 							<button type="button" onclick="changeDropzones(document.getElementById('dropzoneNumber').value, document.getElementById('color0').value, document.getElementById('color1').value, document.getElementById('color2').value)"  class="btn btn-primary" data-dismiss="modal">Save changes</button>
 						</div>
 					</div>
 				</div>
 			</div>
-		
-				
+
+
 			<div id="content2">
 				<input type="text" class="form-control" style="display:none; margin: 0 auto;" id="0" placeholder="Put Your tags here" onkeydown="checkKey('0');">
 				<div method="POST" id="dropzone0" style="display:none; overflow-y:auto; height: 200px;" action="@routes.Application.upload("tag[0]")" enctype="multipart/form-data" class="dropzone"></div>
@@ -195,29 +192,29 @@
 
 	<hr class="featurette-divider">
 	<footer class="footer" style="text-align: center;">
-      
+
 		<a href="#">Back to top</a>
-     
+
     </footer>
-</div>	
-</div> 
+</div>
+</div>
 <script>
-		
+
 		var previewNode = document.querySelector("#template");
 		previewNode.id = "";
 		var previewTemplate = previewNode.parentNode.innerHTML;
 		previewNode.parentNode.removeChild(previewNode);
 		var dropzoneArray = [];
-		for (k = 0; k < numberOfDropzones; k++) {  
+		for (k = 0; k < numberOfDropzones; k++) {
 			defineDropzone('div#dropzone'+k, k);
 		}
-				
+
 		function defineDropzone(name, id){
 			document.getElementById("dropzone"+id).style.backgroundColor = $("#color"+id).spectrum("get").toHexString();
 			console.log($("#color"+id).spectrum("get").toHexString());
 			document.getElementById("dropzone"+id).style.display='block';
 			document.getElementById(id+"").style.display='block';
-			
+
 			dropzoneArray[id] = new Dropzone(name, {
 				dictDefaultMessage: tag[id]
 			});
@@ -232,9 +229,9 @@
 				temp = removeDup(temp);
 				dropzoneArray[id].options.url = "upload/"+tag[id]+","+temp + "`" + lat + " " + lng;
 			});
-				
+
 		}
-		
+
 		Dropzone.autoDiscover = true;
 		//angular
 		var commentApp = angular.module('searchRes', ['ngRoute']);
