--- a/DocDB/app/views/main.scala.html
+++ b/DocDB/app/views/main.scala.html
@@ -5,10 +5,10 @@
 <html>
     <head>
         <title>@title</title>
-		<meta name="viewport" content="width=device-width, initial-scale=3.0, user-scalable=yes" />
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
+        <link rel="shortcut icon" type="image/png" href='@routes.Assets.at("images/favicon.png")'>
 
-		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="/assets/stylesheets/basic.css">
 		<link rel='stylesheet' href='/assets/javascripts/spectrum.css'>
