--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -68,20 +68,20 @@
 				<div id="resultDiv" style="display:none;" ng-app="searchRes" ng-controller="searchController" class="list-group">
 					<div ng-repeat="result in results track by $index" class="singleResultDiv gridable">
 						<span class="list-group-item">
-							<div class="panel panel-primary">
-								<div class="panel-heading">
+							<div class="panel panel-primary" data-link={{result.link}} data-file={{result.file}}>
+								<div class="panel-heading" data-toggle="modal" data-target="#previewModal">
 									<span class="badge" style="float: right;">{{result.size}}kB</span>
 									<h3 class="panel-title" title={{result.file}} >{{result.file}}</h3>
 								</div>
 								<div class="panel-body gridable">
-									<a href={{"Download/"+result.link}} onclick="function(e){e.preventDefault();}">
-										<span class="glyphicon glyphicon-download downloadIcon"></span>
+									<a href={{"Download/"+result.link}}>
+										<span title="download" class="glyphicon glyphicon-download downloadIcon"></span>
 									</a>
-									<a href={{"Preview/"+result.link}} target="_blank" onclick="function(e){e.preventDefault();}">
-										<span class="glyphicon glyphicon-info-sign downloadIcon"></span>
+									<a href={{"Preview/"+result.link}} target="_blank">
+										<span title="open" class="glyphicon glyphicon-eye-open downloadIcon"></span>
 									</a>
-									<span ng-bind-html="result.context | unsafe"></span>
-									<img ng-if="result.link.toLowerCase().endsWith('.jpg')||result.link.toLowerCase().endsWith('.png')||result.link.toLowerCase().endsWith('.gif')" src={{"Preview/"+result.link}}></img>
+									<span ng-bind-html="result.context | unsafe" data-toggle="modal" data-target="#previewModal"></span>
+									<img ng-if="result.link.toLowerCase().endsWith('.jpg')||result.link.toLowerCase().endsWith('.png')||result.link.toLowerCase().endsWith('.gif')" src={{"Preview/"+result.link}} data-toggle="modal" data-target="#previewModal"></img>
 								</div>
 								<div class="panel-footer">
 									<span ng-repeat="tag in result.tags track by $index"><small class="label label-info" >#{{tag}}</small> </span>
@@ -117,8 +117,37 @@
             <strong class="error text-danger" data-dz-errormessage></strong>
         </div>
     </div>
-<!------------------------------------------>
+<!-------------------PREVIEW MODAL----------------------->
 
+			<div class="modal fade" id="previewModal" tabindex="-1" role="dialog" aria-labelledby="FilePreview" aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<div class="modal-header">
+						<h4 class="modal-title" id="previewModalTitle"></h4>
+							<a title="download" id="previewModalDownload">
+								<span class="glyphicon glyphicon-download downloadIcon"></span>
+							</a>
+							<a title="open" id="previewModalPreview" target="_blank">
+								<span class="glyphicon glyphicon-eye-open downloadIcon"></span>
+							</a>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+
+						</div>
+						<div class="modal-body" id="previewModalBody">
+
+						</div>
+						<div class="modal-footer" id="previewModalFooter">
+						<span id="previewModalTags"></span>
+							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+
+
+<!---------------------DROPZONE MODAL--------------------->
 	<div class="jumbotron" style="margin-top: auto;">
 
 		<h2>Drop files</h2>
