--- a/DocDB/public/stylesheets/main.css
+++ b/DocDB/public/stylesheets/main.css
@@ -108,7 +108,25 @@ div #outer{
 .panel:active{
 	cursor: -webkit-grabbing;
 }
-.preview{
+
+
+
+
+#previewModalTitle{
+	margin-right:20%;
+}
+
+#previewModalTags small{
+	margin:2px;
+	float:left;
+}
+
+#previewModalBody{
+	text-align: center;
+}
+
+#previewModalBody object{
 	width:100%;
-	height:100px;
+	min-height:400px;
+	max-height:600px;
 }
