--- a/DocDB/app/views/main.scala.html
+++ b/DocDB/app/views/main.scala.html
@@ -30,6 +30,7 @@
 		<script type="text/javascript" charset="utf-8" src='@routes.Assets.at("javascripts/previewScript.js")'></script>
 		<link rel="stylesheet" media="screen" href='@routes.Assets.at("stylesheets/main.css")'>
 
+		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 		<style>
 		body{overflow-y: scroll;}
 		</style>
